# freestuffapi-rs

./: Cargo.toml  flake.nix  readme.md
examples/: basic.rs
src/: api.rs  client.rs  lib.rs
