[package]
name = "freestuffapi"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Freestuffbot API"
documentation = "https://docs.rs/freestuffapi"
repository = "https://github.com/mibmo/freestuffapi-rs"
readme = "readme.md"
categories = ["api-bindings", "asynchronous", "games"]
keywords = ["free", "freestuffbot", "api", "games"]

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"

[dev-dependencies]
futures = "0.3.30"
tokio = { version = "1.34.0", features = ["full", "net"] }
