[package]
name = "freestuffapi"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Freestuffbot API"
documentation = "https://docs.rs/freestuffapi"
repository = "https://github.com/mibmo/freestuffapi-rs"
readme = "readme.md"
categories = ["api-bindings", "asynchronous", "games"]
keywords = ["free", "freestuffbot", "api", "games"]

[features]
default = ["client"]
client = ["dep:reqwest"]

[dependencies]
reqwest = { version = "0.11.22", features = ["json"], optional = true }
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"

[dev-dependencies]
futures = "0.3.30"
tokio = { version = "1.34.0", features = ["full", "net"] }
